Home page Search Functionality

--- a/frontend/src/components/Hero/index.css
+++ b/frontend/src/components/Hero/index.css
@@ -73,6 +73,9 @@
   cursor: pointer;
   color: #555;
   font-size: 1.5rem;
+   background-color: transparent;
+   outline: none;
+   border: 0px solid;
 }
 
 .ctaContainer {
