--- a/frontend/src/components/JobsSection/index.css
+++ b/frontend/src/components/JobsSection/index.css
@@ -207,3 +207,7 @@
     grid-template-columns: repeat(1, 1fr); /* 2 columns on medium screens */
   }
 }
+
+.jobs-loader-container{
+   text-align: center;
+}
