--- a/frontend/src/components/Contactus/index.css
+++ b/frontend/src/components/Contactus/index.css
@@ -117,7 +117,7 @@
 }
 
 .submit-btn {
-  background-color: #28a745;
+  background-color: #0ac135;
   color: white;
   font-size: 1.1rem;
   font-weight: bold;
@@ -139,11 +139,17 @@
 }
 
 /* Footer */
-.footer {
-  text-align: center;
+.footer-contact {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  font-size: large;
   margin-top: 40px;
   font-size: 0.9rem;
-  color: #777;
+  height:4rem;
+  border-radius: 5px;
+  background-color:  #0ac135;
+  color: #fbefef;
 }
 
 /* Responsive Design */
