--- a/frontend/src/components/Contactus/index.css
+++ b/frontend/src/components/Contactus/index.css
@@ -2,7 +2,7 @@
 .contact-us-container {
   display: flex;
   flex-direction: column;
-  max-width: 1000px;
+  max-width: 100vw;
   margin: 0 auto;
   padding: 40px;
   background-color: #f8f9fa;
