--- a/frontend/src/components/Footer/index.css
+++ b/frontend/src/components/Footer/index.css
@@ -12,7 +12,7 @@
   color: #ffffff; /* White text */
   padding: 20px; /* Padding */
   text-align: center;
-  width: 100%; /* Full width */
+  max-width: 100vw;
   margin: 0; /* No margin */
   position: relative; /* Position relative for positioning elements */
   flex-shrink: 0; /* Prevent shrinking */
